--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://github.com/SpaiR/imgui-java/releases/tag/v1.85.0"
+    }
 }
 
 dependencies {
@@ -74,8 +77,29 @@ def getImplementationBasedOnOS(String implWithoutNatives, String version) {
 }
 
 dependencies {
+    // LWJGL stuff
     setLWJGLNatives()
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
+
+    // ImGui stuff
+    ['', '-opengl', '-glfw'].each {
+        implementation "org.lwjgl:lwjgl$it:$lwjglVersion"
+        String implLWJGLNatives = getImplementationBasedOnOS("org.lwjgl:lwjgl$it::", "")
+        implementation implLWJGLNatives
+    }
+
+    implementation "io.github.spair:imgui-java-binding:$imguiVersion"
+    implementation "io.github.spair:imgui-java-lwjgl3:$imguiVersion"
+
+    // Check in which os we are running it and sets the imGui natives
+    String implImGuiNatives = getImplementationBasedOnOS("io.github.spair:imgui-java-", ":$imguiVersion")
+    implementation implImGuiNatives
+
+    /* for mac users using the latest version of ImGui (I tried with the version in the video but I could not
+     * get it to work) if you have this error : 'Library not loaded: /usr/local/lib/libfreetype.6.dylib' you can
+     * solve it using this command in your terminal:
+     * brew install libpng freetype
+     */
 
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-assimp"
