Serialization with Gson. To it works, was needed to change the way that some objects are built because Gson doesn't support parameters when using Cosntructor method.

--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,9 @@ dependencies {
      * brew install libpng freetype
      */
 
+    // Gson stuff
+    implementation 'com.google.code.gson:gson:2.8.9'
+
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-assimp"
     implementation "org.lwjgl:lwjgl-glfw"
