--- a/imgui.ini
+++ b/imgui.ini
@@ -4,17 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1328,19
+Pos=1217,117
 Size=550,680
 Collapsed=0
 
 [Window][Window test]
-Pos=694,143
-Size=260,505
+Pos=725,-30
+Size=436,288
 Collapsed=0
 
 [Window][Inspector]
-Pos=59,60
-Size=396,458
+Pos=62,113
+Size=367,396
+Collapsed=0
+
+[Window][Example: Log]
+Pos=520,135
+Size=500,400
 Collapsed=0
 
