GameObjects' deserialization and serialization implemented using Gson

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,22 +4,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1217,117
+Pos=1051,46
 Size=550,680
 Collapsed=0
 
 [Window][Window test]
-Pos=725,-30
-Size=436,288
+Pos=551,21
+Size=339,401
 Collapsed=0
 
 [Window][Inspector]
-Pos=62,113
-Size=367,396
+Pos=19,22
+Size=439,456
 Collapsed=0
 
 [Window][Example: Log]
 Pos=520,135
 Size=500,400
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=79,82
+Size=556,498
 Collapsed=0
 
