Added buttons to LevelEditorScene using the spritesheets we want

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,12 +9,22 @@ Size=318,433
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1073,19
+Pos=1593,-4
 Size=550,680
 Collapsed=0
 
 [Window][Inspector]
-Pos=77,-2
-Size=716,792
+Pos=94,117
+Size=576,696
+Collapsed=0
+
+[Window][Icos]
+Pos=60,60
+Size=32,48
+Collapsed=0
+
+[Window][Icons]
+Pos=101,77
+Size=120,717
 Collapsed=0
 
