--- a/imgui.ini
+++ b/imgui.ini
@@ -14,9 +14,10 @@ Size=550,680
 Collapsed=0
 
 [Window][Inspector]
-Pos=1123,44
-Size=595,520
+Pos=85,131
+Size=528,470
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Icos]
 Pos=60,60
@@ -24,7 +25,18 @@ Size=32,48
 Collapsed=0
 
 [Window][Icons]
-Pos=193,31
-Size=616,321
+Pos=1334,247
+Size=408,470
 Collapsed=0
+DockId=0x00000005,0
+
+[Window][Dockspace Demo]
+Pos=0,0
+Size=1920,986
+Collapsed=0
+
+[Docking][Data]
+DockNode  ID=0x00000001 Pos=85,131 Size=528,470 Selected=0xF02CD328
+DockNode  ID=0x00000005 Pos=1334,247 Size=408,470 Selected=0xCBAB7F7A
+DockSpace ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,938 CentralNode=1
 
