--- a/imgui.ini
+++ b/imgui.ini
@@ -1,42 +1,40 @@
-[Window][Debug##Default]
-Pos=60,60
-Size=400,400
-Collapsed=0
-
-[Window][Window test]
-Pos=1566,40
-Size=318,433
-Collapsed=0
-
-[Window][Dear ImGui Demo]
-Pos=1006,94
-Size=550,680
-Collapsed=0
-
-[Window][Inspector]
-Pos=85,131
-Size=528,470
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Icos]
-Pos=60,60
-Size=32,48
-Collapsed=0
-
-[Window][Icons]
-Pos=1334,247
-Size=408,470
-Collapsed=0
-DockId=0x00000005,0
-
 [Window][Dockspace Demo]
 Pos=0,0
 Size=1920,986
 Collapsed=0
 
+[Window][Debug##Default]
+Pos=60,60
+Size=400,400
+Collapsed=0
+
+[Window][Icons]
+Pos=8,40
+Size=387,564
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Dear ImGui Demo]
+Pos=327,262
+Size=550,680
+Collapsed=1
+
+[Window][Game Viewport]
+Pos=397,40
+Size=1515,938
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Inspector]
+Pos=8,606
+Size=387,372
+Collapsed=0
+DockId=0x00000004,0
+
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=85,131 Size=528,470 Selected=0xF02CD328
-DockNode  ID=0x00000005 Pos=1334,247 Size=408,470 Selected=0xCBAB7F7A
-DockSpace ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,938 CentralNode=1
+DockSpace     ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,938 Split=X
+  DockNode    ID=0x00000001 Parent=0x6D3A3A6E SizeRef=387,938 Split=Y Selected=0xCBAB7F7A
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=177,564 Selected=0xCBAB7F7A
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=177,372 Selected=0xF02CD328
+  DockNode    ID=0x00000002 Parent=0x6D3A3A6E SizeRef=1515,938 CentralNode=1 Selected=0xAE7BB42F
 
