--- a/imgui.ini
+++ b/imgui.ini
@@ -10,9 +10,9 @@ Collapsed=0
 
 [Window][Icons]
 Pos=8,40
-Size=387,564
+Size=387,524
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
 
 [Window][Dear ImGui Demo]
 Pos=327,262
@@ -31,10 +31,18 @@ Size=387,372
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][Properties]
+Pos=8,566
+Size=387,412
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
-DockSpace     ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,938 Split=X
-  DockNode    ID=0x00000001 Parent=0x6D3A3A6E SizeRef=387,938 Split=Y Selected=0xCBAB7F7A
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=177,564 Selected=0xCBAB7F7A
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=177,372 Selected=0xF02CD328
-  DockNode    ID=0x00000002 Parent=0x6D3A3A6E SizeRef=1515,938 CentralNode=1 Selected=0xAE7BB42F
+DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,938 Split=X
+  DockNode      ID=0x00000001 Parent=0x6D3A3A6E SizeRef=387,938 Split=Y Selected=0xCBAB7F7A
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=177,564 Split=Y Selected=0xCBAB7F7A
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=387,524 Selected=0xCBAB7F7A
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=387,412 Selected=0xC89E3217
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=177,372 Selected=0xF02CD328
+  DockNode      ID=0x00000002 Parent=0x6D3A3A6E SizeRef=1515,938 CentralNode=1 Selected=0xAE7BB42F
 
