--- a/imgui.ini
+++ b/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Icons]
 Pos=8,40
-Size=387,524
+Size=387,938
 Collapsed=0
 DockId=0x00000005,0
 
@@ -36,6 +36,11 @@ Pos=8,566
 Size=387,412
 Collapsed=0
 DockId=0x00000006,0
+
+[Window][Level Editor Stuff]
+Pos=293,250
+Size=790,296
+Collapsed=0
 
 [Docking][Data]
 DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,938 Split=X
