--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace Demo]
 Pos=0,0
-Size=1920,1019
+Size=1920,986
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Icons]
 Pos=8,40
-Size=441,371
+Size=475,314
 Collapsed=0
 DockId=0x00000005,0
 
@@ -20,8 +20,8 @@ Size=550,680
 Collapsed=1
 
 [Window][Game Viewport]
-Pos=451,40
-Size=1461,971
+Pos=485,40
+Size=1427,938
 Collapsed=0
 DockId=0x00000002,0
 
@@ -32,25 +32,25 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Properties]
-Pos=8,413
-Size=454,387
+Pos=8,356
+Size=475,373
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Level Editor Stuff]
-Pos=8,413
-Size=441,598
+Pos=8,731
+Size=475,247
 Collapsed=0
 DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace         ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,971 Split=X
-  DockNode        ID=0x00000001 Parent=0x6D3A3A6E SizeRef=441,938 Split=Y Selected=0xCBAB7F7A
+DockSpace         ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,938 Split=X
+  DockNode        ID=0x00000001 Parent=0x6D3A3A6E SizeRef=475,938 Split=Y Selected=0xCBAB7F7A
     DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=177,564 Split=Y Selected=0xCBAB7F7A
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=387,358 Selected=0xCBAB7F7A
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=387,578 Split=Y Selected=0xC89E3217
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=382,374 Selected=0xC89E3217
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=382,202 Selected=0x4D7EC7FC
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=387,272 Selected=0xCBAB7F7A
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=387,538 Split=Y Selected=0x4D7EC7FC
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=374,373 Selected=0xC89E3217
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=374,247 Selected=0x4D7EC7FC
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=177,372 Selected=0xF02CD328
-  DockNode        ID=0x00000002 Parent=0x6D3A3A6E SizeRef=1461,938 CentralNode=1 Selected=0xAE7BB42F
+  DockNode        ID=0x00000002 Parent=0x6D3A3A6E SizeRef=1427,938 CentralNode=1 Selected=0xAE7BB42F
 
