--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 test {
@@ -77,6 +77,9 @@ def getImplementationBasedOnOS(String implWithoutNatives, String version) {
 }
 
 dependencies {
+    // JUnit
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+
     // LWJGL stuff
     setLWJGLNatives()
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
