--- a/imgui.ini
+++ b/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Icons]
 Pos=8,40
-Size=530,314
+Size=594,367
 Collapsed=0
 DockId=0x00000005,0
 
@@ -20,8 +20,8 @@ Size=550,680
 Collapsed=1
 
 [Window][Game Viewport]
-Pos=540,40
-Size=1372,938
+Pos=604,40
+Size=1308,938
 Collapsed=0
 DockId=0x00000002,0
 
@@ -32,25 +32,25 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Properties]
-Pos=8,356
-Size=530,249
+Pos=8,409
+Size=594,246
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Level Editor Stuff]
-Pos=8,607
-Size=530,371
+Pos=8,657
+Size=594,321
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000009,0
 
 [Docking][Data]
 DockSpace         ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,938 Split=X
-  DockNode        ID=0x00000001 Parent=0x6D3A3A6E SizeRef=530,938 Split=Y Selected=0xCBAB7F7A
+  DockNode        ID=0x00000001 Parent=0x6D3A3A6E SizeRef=594,938 Split=Y Selected=0xCBAB7F7A
     DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=177,564 Split=Y Selected=0xCBAB7F7A
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=387,272 Selected=0xCBAB7F7A
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=387,538 Split=Y Selected=0x4D7EC7FC
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=374,249 Selected=0xC89E3217
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=374,371 Selected=0x4D7EC7FC
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=387,367 Selected=0xCBAB7F7A
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=387,569 Split=Y Selected=0xC89E3217
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=530,246 Selected=0xC89E3217
+        DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=530,321 Selected=0x4D7EC7FC
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=177,372 Selected=0xF02CD328
-  DockNode        ID=0x00000002 Parent=0x6D3A3A6E SizeRef=1372,938 CentralNode=1 Selected=0xAE7BB42F
+  DockNode        ID=0x00000002 Parent=0x6D3A3A6E SizeRef=1308,938 CentralNode=1 Selected=0xAE7BB42F
 
