Begin Scene Hierarchy

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,13 +10,13 @@ Collapsed=0
 
 [Window][Icons]
 Pos=8,40
-Size=456,467
+Size=456,971
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Level Editor Stuff]
 Pos=8,40
-Size=456,467
+Size=456,971
 Collapsed=0
 DockId=0x00000003,1
 
@@ -31,6 +31,11 @@ Pos=8,509
 Size=456,502
 Collapsed=0
 DockId=0x00000004,0
+
+[Window][Scene Hierarchy]
+Pos=1421,185
+Size=324,530
+Collapsed=0
 
 [Docking][Data]
 DockSpace     ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,971 Split=X
