Upgrade Scene Hierarchy:
Started to implement Drag and drop system in Scene Hierarchy

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace Demo]
 Pos=0,0
-Size=1920,1019
+Size=1920,1017
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,37 +10,38 @@ Collapsed=0
 
 [Window][Icons]
 Pos=8,40
-Size=456,971
+Size=600,466
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Level Editor Stuff]
 Pos=8,40
-Size=456,971
+Size=600,466
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Game Viewport]
-Pos=466,40
-Size=1446,971
+Pos=610,40
+Size=1302,969
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties]
-Pos=8,509
-Size=456,502
+Pos=8,508
+Size=600,501
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Scene Hierarchy]
-Pos=1421,185
-Size=324,530
+Pos=8,40
+Size=600,466
 Collapsed=0
+DockId=0x00000003,2
 
 [Docking][Data]
-DockSpace     ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,971 Split=X
-  DockNode    ID=0x00000001 Parent=0x6D3A3A6E SizeRef=456,971 Split=Y Selected=0xCBAB7F7A
+DockSpace     ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,969 Split=X
+  DockNode    ID=0x00000001 Parent=0x6D3A3A6E SizeRef=600,971 Split=Y Selected=0xCBAB7F7A
     DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=456,467 Selected=0xCBAB7F7A
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=456,502 Selected=0xC89E3217
-  DockNode    ID=0x00000002 Parent=0x6D3A3A6E SizeRef=1446,971 CentralNode=1 Selected=0xAE7BB42F
+  DockNode    ID=0x00000002 Parent=0x6D3A3A6E SizeRef=1302,971 CentralNode=1 Selected=0xAE7BB42F
 
