--- a/imgui.ini
+++ b/imgui.ini
@@ -10,40 +10,40 @@ Collapsed=0
 
 [Window][Icons]
 Pos=8,40
-Size=599,486
+Size=599,243
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000002,0
 
 [Window][Level Editor Stuff]
 Pos=8,40
-Size=599,486
+Size=599,243
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000002,1
 
 [Window][Game Viewport]
 Pos=609,40
 Size=1303,971
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][Properties]
-Pos=8,508
-Size=600,501
+Pos=8,285
+Size=599,307
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000007,0
 
 [Window][Scene Hierarchy]
-Pos=8,528
-Size=599,483
+Pos=8,594
+Size=599,417
 Collapsed=0
 DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace     ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,971 Split=X
-  DockNode    ID=0x00000003 Parent=0x6D3A3A6E SizeRef=599,971 Split=Y Selected=0xCBAB7F7A
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=599,486 Selected=0xCBAB7F7A
-    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=599,483 Selected=0x9A68760C
-  DockNode    ID=0x00000004 Parent=0x6D3A3A6E SizeRef=1303,971 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=600,971 Selected=0xCBAB7F7A
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1302,971 CentralNode=1 Selected=0xAE7BB42F
+DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,971 Split=X
+  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=599,971 Split=Y Selected=0xCBAB7F7A
+    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=599,552 Split=Y Selected=0xCBAB7F7A
+      DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=599,243 Selected=0xCBAB7F7A
+      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=599,307 Selected=0xC89E3217
+    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=599,417 Selected=0x9A68760C
+  DockNode      ID=0x00000004 Parent=0x6D3A3A6E SizeRef=1303,971 CentralNode=1 Selected=0xAE7BB42F
 
