--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace Demo]
 Pos=0,0
-Size=1170,705
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -16,37 +16,123 @@ DockId=0x00000004,0
 
 [Window][Level Editor Stuff]
 Pos=8,40
-Size=562,284
+Size=562,447
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Game Viewport]
 Pos=572,40
-Size=590,657
+Size=1340,1032
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
-Pos=8,246
-Size=562,318
+Pos=8,216
+Size=562,271
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene Hierarchy]
-Pos=8,520
-Size=562,177
+Pos=8,793
+Size=562,279
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Objects]
-Pos=8,326
-Size=562,192
+Pos=8,489
+Size=562,302
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
 Pos=572,40
-Size=590,657
+Size=1340,1032
+Collapsed=0
+DockId=0x00000007,2
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=714,462
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=60,60
+Size=952,488
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=100,200
+Size=687,100
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=100,300
+Size=381,74
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=-13,137
+Size=687,100
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=295,108
+Size=701,548
+Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1920,1080
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=996,1074
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=60,60
+Size=598,74
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=78,18
+Size=589,1074
+Collapsed=0
+
+[Window][Horizontal contents size demo window]
+Pos=60,60
+Size=533,570
+Collapsed=0
+
+[Window][Sprite Animation Window]
+Pos=572,40
+Size=486,653
+Collapsed=0
+DockId=0x00000007,1
+
+[Window][ImNodes Demo]
+Pos=572,40
+Size=1340,1032
 Collapsed=0
 DockId=0x00000007,1
 
@@ -160,8 +246,12 @@ Column 3  Width=113
 Column 4  Weight=1.0000
 Column 5  Width=-1
 
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1154,657 Split=X
+DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,1032 Split=X
   DockNode      ID=0x00000001 Parent=0x6D3A3A6E SizeRef=562,971 Split=Y Selected=0x4D7EC7FC
     DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=598,284 Split=Y Selected=0x4D7EC7FC
       DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=598,204 Selected=0x4D7EC7FC
@@ -169,5 +259,5 @@ DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1154,657 Split=X
     DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=598,371 Split=Y Selected=0x7DA7F56F
       DockNode  ID=0x00000002 Parent=0x00000008 SizeRef=598,192 Selected=0x7DA7F56F
       DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=598,177 Selected=0x9A68760C
-  DockNode      ID=0x00000007 Parent=0x6D3A3A6E SizeRef=1340,971 CentralNode=1 Selected=0xAE7BB42F
+  DockNode      ID=0x00000007 Parent=0x6D3A3A6E SizeRef=1340,971 CentralNode=1 Selected=0xD89ADBBD
 
