--- a/imgui.ini
+++ b/imgui.ini
@@ -16,37 +16,37 @@ DockId=0x00000004,0
 
 [Window][Level Editor Stuff]
 Pos=8,40
-Size=562,447
+Size=417,174
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Game Viewport]
-Pos=572,40
-Size=1340,1032
+Pos=427,40
+Size=1485,1032
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
 Pos=8,216
-Size=562,271
+Size=417,271
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene Hierarchy]
 Pos=8,793
-Size=562,279
+Size=417,279
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Objects]
 Pos=8,489
-Size=562,302
+Size=417,302
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-Pos=572,40
-Size=1340,1032
+Pos=427,40
+Size=1485,1032
 Collapsed=0
 DockId=0x00000007,2
 
@@ -131,10 +131,16 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][ImNodes Demo]
-Pos=572,40
-Size=1340,1032
+Pos=427,40
+Size=1485,1032
 Collapsed=0
 DockId=0x00000007,1
+
+[Window][imgui-node-editor Demo]
+Pos=427,40
+Size=1485,1032
+Collapsed=0
+DockId=0x00000007,2
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -252,12 +258,12 @@ Column 1  Weight=1.0000
 
 [Docking][Data]
 DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,1032 Split=X
-  DockNode      ID=0x00000001 Parent=0x6D3A3A6E SizeRef=562,971 Split=Y Selected=0x4D7EC7FC
+  DockNode      ID=0x00000001 Parent=0x6D3A3A6E SizeRef=417,971 Split=Y Selected=0x4D7EC7FC
     DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=598,284 Split=Y Selected=0x4D7EC7FC
       DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=598,204 Selected=0x4D7EC7FC
       DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=598,318 Selected=0xC89E3217
     DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=598,371 Split=Y Selected=0x7DA7F56F
       DockNode  ID=0x00000002 Parent=0x00000008 SizeRef=598,192 Selected=0x7DA7F56F
       DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=598,177 Selected=0x9A68760C
-  DockNode      ID=0x00000007 Parent=0x6D3A3A6E SizeRef=1340,971 CentralNode=1 Selected=0xD89ADBBD
+  DockNode      ID=0x00000007 Parent=0x6D3A3A6E SizeRef=1485,971 CentralNode=1 Selected=0xAE7BB42F
 
