--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace Demo]
 Pos=0,0
-Size=1920,1080
+Size=46,32
 Collapsed=0
 
 [Window][Debug##Default]
@@ -16,37 +16,37 @@ DockId=0x00000007,0
 
 [Window][Level Editor Stuff]
 Pos=8,40
-Size=417,268
+Size=7,32
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Game Viewport]
-Pos=427,40
-Size=1485,1032
+Pos=17,40
+Size=7,4
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
-Pos=8,310
-Size=417,265
+Pos=8,42
+Size=7,32
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Scene Hierarchy]
-Pos=8,577
-Size=417,495
+Pos=8,43
+Size=7,1
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Objects]
 Pos=8,40
-Size=417,268
+Size=7,32
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
-Pos=427,40
-Size=1485,1032
+Pos=17,40
+Size=7,4
 Collapsed=0
 DockId=0x00000007,2
 
@@ -131,8 +131,8 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][ImNodes Demo]
-Pos=427,40
-Size=1485,1032
+Pos=17,40
+Size=7,4
 Collapsed=0
 DockId=0x00000007,1
 
@@ -257,11 +257,11 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,1032 Split=X
+DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=16,4 Split=X
   DockNode      ID=0x00000001 Parent=0x6D3A3A6E SizeRef=417,971 Split=Y Selected=0x4D7EC7FC
     DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=598,535 Split=Y Selected=0x7DA7F56F
       DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=417,268 Selected=0x7DA7F56F
       DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=417,265 Selected=0xC89E3217
     DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=598,495 Selected=0x9A68760C
-  DockNode      ID=0x00000007 Parent=0x6D3A3A6E SizeRef=1485,971 CentralNode=1 Selected=0xAE7BB42F
+  DockNode      ID=0x00000007 Parent=0x6D3A3A6E SizeRef=1485,971 CentralNode=1 Selected=0xD89ADBBD
 
