--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace Demo]
 Pos=0,0
-Size=1920,986
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -16,37 +16,37 @@ DockId=0x00000007,0
 
 [Window][Level Editor Stuff]
 Pos=8,40
-Size=417,243
+Size=417,773
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Game Viewport]
 Pos=427,40
-Size=1485,938
+Size=1485,1032
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
-Pos=8,285
-Size=417,457
+Pos=8,310
+Size=417,503
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Scene Hierarchy]
-Pos=8,744
-Size=417,234
+Pos=8,815
+Size=417,257
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Objects]
 Pos=8,40
-Size=417,243
+Size=417,773
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
 Pos=427,40
-Size=1485,938
+Size=1485,1032
 Collapsed=0
 DockId=0x00000007,2
 
@@ -81,7 +81,7 @@ Size=952,488
 Collapsed=0
 
 [Window][Same title as another window##2]
-Pos=100,200
+Pos=127,361
 Size=687,100
 Collapsed=0
 
@@ -96,7 +96,7 @@ Size=687,100
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=20,108
+Pos=91,122
 Size=1311,859
 Collapsed=0
 
@@ -126,7 +126,7 @@ Collapsed=0
 
 [Window][Sprite Animation Window]
 Pos=427,40
-Size=1485,938
+Size=1485,1032
 Collapsed=0
 DockId=0x00000007,1
 
@@ -141,6 +141,11 @@ Pos=427,40
 Size=1485,1032
 Collapsed=0
 DockId=0x00000007,2
+
+[Window][Example: Long text display]
+Pos=17,230
+Size=520,600
+Collapsed=0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -257,11 +262,11 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,938 Split=X
+DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,1032 Split=X
   DockNode      ID=0x00000001 Parent=0x6D3A3A6E SizeRef=417,971 Split=Y Selected=0x4D7EC7FC
     DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=598,702 Split=Y Selected=0x7DA7F56F
       DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=417,243 Selected=0x7DA7F56F
       DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=417,457 Selected=0xC89E3217
     DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=598,234 Selected=0x9A68760C
-  DockNode      ID=0x00000007 Parent=0x6D3A3A6E SizeRef=1485,971 CentralNode=1 Selected=0xAE7BB42F
+  DockNode      ID=0x00000007 Parent=0x6D3A3A6E SizeRef=1485,971 CentralNode=1 Selected=0xE927CF2F
 
