--- a/imgui.ini
+++ b/imgui.ini
@@ -268,5 +268,5 @@ DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,1032 Split=X
       DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=417,243 Selected=0x7DA7F56F
       DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=417,457 Selected=0xC89E3217
     DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=598,234 Selected=0x9A68760C
-  DockNode      ID=0x00000007 Parent=0x6D3A3A6E SizeRef=1485,971 CentralNode=1 Selected=0xE927CF2F
+  DockNode      ID=0x00000007 Parent=0x6D3A3A6E SizeRef=1485,971 CentralNode=1 Selected=0xAE7BB42F
 
