--- a/imgui.ini
+++ b/imgui.ini
@@ -12,7 +12,7 @@ Collapsed=0
 Pos=380,40
 Size=1532,1032
 Collapsed=0
-DockId=0x00000003,2
+DockId=0x00000003,3
 
 [Window][Level Editor Stuff]
 Pos=8,40
@@ -36,11 +36,11 @@ DockId=0x00000003,0
 Pos=380,40
 Size=1532,1032
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000003,2
 
 [Window][Scene Hierarchy]
-Pos=8,720
-Size=370,352
+Pos=8,426
+Size=370,646
 Collapsed=0
 DockId=0x00000008,0
 
@@ -50,6 +50,12 @@ Size=370,292
 Collapsed=0
 DockId=0x00000007,0
 
+[Window][Sprite Animation Window]
+Pos=380,40
+Size=1532,1032
+Collapsed=0
+DockId=0x00000003,1
+
 [Docking][Data]
 DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,1032 Split=X Selected=0xAE7BB42F
   DockNode      ID=0x00000002 Parent=0x6D3A3A6E SizeRef=370,1032 Split=Y Selected=0x7DA7F56F
@@ -57,5 +63,5 @@ DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,1032 Split=X 
     DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=370,646 Split=Y Selected=0xC89E3217
       DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=370,292 Selected=0xC89E3217
       DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=370,352 Selected=0x9A68760C
-  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1532,1032 CentralNode=1 Selected=0xAE7BB42F
+  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1532,1032 CentralNode=1 Selected=0x6C236EB8
 
