--- a/imgui.ini
+++ b/imgui.ini
@@ -56,6 +56,11 @@ Size=1532,1032
 Collapsed=0
 DockId=0x00000003,1
 
+[Window][Example: Custom rendering]
+Pos=323,175
+Size=1152,587
+Collapsed=0
+
 [Docking][Data]
 DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,1032 Split=X Selected=0xAE7BB42F
   DockNode      ID=0x00000002 Parent=0x6D3A3A6E SizeRef=370,1032 Split=Y Selected=0x7DA7F56F
