--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace Demo]
 Pos=0,0
-Size=1920,1061
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,25 +10,25 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=330,40
-Size=1582,1013
+Size=1582,1032
 Collapsed=0
 DockId=0x00000003,2
 
 [Window][Level Editor Stuff]
 Pos=8,40
-Size=320,377
+Size=320,384
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Objects]
 Pos=8,40
-Size=320,377
+Size=320,384
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Game Viewport]
 Pos=330,40
-Size=1582,1013
+Size=1582,1032
 Collapsed=0
 DockId=0x00000003,0
 
@@ -39,8 +39,8 @@ Collapsed=0
 DockId=0x00000003,2
 
 [Window][Scene Hierarchy]
-Pos=8,419
-Size=320,634
+Pos=8,426
+Size=320,646
 Collapsed=0
 DockId=0x00000008,0
 
@@ -52,7 +52,7 @@ DockId=0x00000007,0
 
 [Window][Sprite Animation Window]
 Pos=330,40
-Size=1582,1013
+Size=1582,1032
 Collapsed=0
 DockId=0x00000003,1
 
@@ -62,11 +62,11 @@ Size=1152,587
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,1013 Split=X Selected=0xAE7BB42F
+DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,1032 Split=X Selected=0xAE7BB42F
   DockNode      ID=0x00000002 Parent=0x6D3A3A6E SizeRef=320,1032 Split=Y Selected=0x7DA7F56F
     DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=370,384 Selected=0x7DA7F56F
     DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=370,646 Split=Y Selected=0xC89E3217
       DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=370,292 Selected=0xC89E3217
       DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=370,352 Selected=0x9A68760C
-  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1582,1032 CentralNode=1 Selected=0x6C236EB8
+  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1582,1032 CentralNode=1 Selected=0xAE7BB42F
 
