[Fix] Levels load order

--- a/imgui.ini
+++ b/imgui.ini
@@ -68,5 +68,5 @@ DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,971 Split=X S
     DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=370,646 Split=Y Selected=0xC89E3217
       DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=370,292 Selected=0xC89E3217
       DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=370,352 Selected=0x9A68760C
-  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1389,1032 CentralNode=1 Selected=0x6C236EB8
+  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1389,1032 CentralNode=1 Selected=0xAE7BB42F
 
