--- a/imgui.ini
+++ b/imgui.ini
@@ -9,26 +9,26 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=523,40
-Size=1389,971
+Pos=454,40
+Size=1458,971
 Collapsed=0
 DockId=0x00000003,2
 
 [Window][Level Editor Stuff]
 Pos=8,40
-Size=513,361
+Size=444,361
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Objects]
 Pos=8,40
-Size=513,361
+Size=444,361
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Game Viewport]
-Pos=523,40
-Size=1389,971
+Pos=454,40
+Size=1458,971
 Collapsed=0
 DockId=0x00000003,0
 
@@ -40,7 +40,7 @@ DockId=0x00000003,2
 
 [Window][Scene Hierarchy]
 Pos=8,403
-Size=513,608
+Size=444,608
 Collapsed=0
 DockId=0x00000008,0
 
@@ -51,8 +51,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Sprite Animation Window]
-Pos=523,40
-Size=1389,971
+Pos=454,40
+Size=1458,971
 Collapsed=0
 DockId=0x00000003,1
 
@@ -63,10 +63,10 @@ Collapsed=0
 
 [Docking][Data]
 DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,971 Split=X Selected=0xAE7BB42F
-  DockNode      ID=0x00000002 Parent=0x6D3A3A6E SizeRef=513,1032 Split=Y Selected=0x7DA7F56F
+  DockNode      ID=0x00000002 Parent=0x6D3A3A6E SizeRef=444,1032 Split=Y Selected=0x7DA7F56F
     DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=370,384 Selected=0x7DA7F56F
     DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=370,646 Split=Y Selected=0xC89E3217
       DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=370,292 Selected=0xC89E3217
       DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=370,352 Selected=0x9A68760C
-  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1389,1032 CentralNode=1 Selected=0xAE7BB42F
+  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1458,1032 CentralNode=1 Selected=0x6C236EB8
 
