--- a/imgui.ini
+++ b/imgui.ini
@@ -39,8 +39,8 @@ Collapsed=0
 DockId=0x00000003,2
 
 [Window][Scene Hierarchy]
-Pos=8,403
-Size=638,608
+Pos=8,680
+Size=638,331
 Collapsed=0
 DockId=0x00000008,0
 
@@ -67,7 +67,7 @@ Size=727,284
 Collapsed=0
 
 [Window][frame_settings_popup]
-Pos=1031,360
+Pos=882,352
 Size=281,218
 Collapsed=0
 
@@ -78,5 +78,5 @@ DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,971 Split=X S
     DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=370,646 Split=Y Selected=0xC89E3217
       DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=370,292 Selected=0xC89E3217
       DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=370,352 Selected=0x9A68760C
-  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1264,1032 CentralNode=1 Selected=0x6C236EB8
+  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1264,1032 CentralNode=1 Selected=0xAE7BB42F
 
