--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace Demo]
 Pos=0,0
-Size=1537,839
+Size=1920,1019
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,25 +10,25 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=648,40
-Size=881,791
+Size=1264,971
 Collapsed=0
 DockId=0x00000003,2
 
 [Window][Level Editor Stuff]
 Pos=8,40
-Size=638,294
+Size=638,361
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Objects]
 Pos=8,40
-Size=638,294
+Size=638,361
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Game Viewport]
 Pos=648,40
-Size=881,791
+Size=1264,971
 Collapsed=0
 DockId=0x00000003,0
 
@@ -39,20 +39,20 @@ Collapsed=0
 DockId=0x00000003,2
 
 [Window][Scene Hierarchy]
-Pos=8,561
-Size=638,270
+Pos=8,679
+Size=638,332
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Properties]
-Pos=8,336
-Size=638,223
+Pos=8,403
+Size=638,274
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Sprite Animation Window]
 Pos=648,40
-Size=881,791
+Size=1264,971
 Collapsed=0
 DockId=0x00000003,1
 
@@ -72,11 +72,11 @@ Size=281,218
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1521,791 Split=X Selected=0xAE7BB42F
+DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,971 Split=X Selected=0xAE7BB42F
   DockNode      ID=0x00000002 Parent=0x6D3A3A6E SizeRef=638,1032 Split=Y Selected=0x7DA7F56F
     DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=370,384 Selected=0x7DA7F56F
     DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=370,646 Split=Y Selected=0xC89E3217
       DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=370,234 Selected=0xC89E3217
       DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=370,283 Selected=0x9A68760C
-  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1264,1032 CentralNode=1 Selected=0xAE7BB42F
+  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1264,1032 CentralNode=1 Selected=0x6C236EB8
 
