--- a/imgui.ini
+++ b/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=648,40
-Size=546,971
+Size=828,971
 Collapsed=0
 DockId=0x00000004,1
 
@@ -28,7 +28,7 @@ DockId=0x00000005,0
 
 [Window][Game Viewport]
 Pos=648,40
-Size=546,971
+Size=828,971
 Collapsed=0
 DockId=0x00000004,0
 
@@ -45,14 +45,14 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Properties]
-Pos=8,426
-Size=638,291
+Pos=8,403
+Size=638,274
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Sprite Animation Window]
-Pos=1196,40
-Size=716,971
+Pos=1478,40
+Size=434,971
 Collapsed=0
 DockId=0x00000009,0
 
@@ -67,12 +67,12 @@ Size=727,284
 Collapsed=0
 
 [Window][frame_settings_popup]
-Pos=883,352
-Size=281,218
+Pos=905,356
+Size=317,116
 Collapsed=0
 
 [Window][Load Animation]
-Pos=930,391
+Pos=949,392
 Size=383,230
 Collapsed=0
 
@@ -82,8 +82,13 @@ Size=996,1013
 Collapsed=1
 
 [Window][New Animation]
-Pos=714,377
+Pos=716,377
 Size=441,168
+Collapsed=0
+
+[Window][Delete Animation]
+Pos=768,394
+Size=383,230
 Collapsed=0
 
 [Table][0xC9935533,3]
@@ -198,6 +203,6 @@ DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,971 Split=X S
       DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=370,274 Selected=0xC89E3217
       DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=370,332 Selected=0x9A68760C
   DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1264,1032 Split=X Selected=0xAE7BB42F
-    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=546,971 CentralNode=1 Selected=0xAE7BB42F
-    DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=716,971 Selected=0x6C236EB8
+    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=828,971 CentralNode=1 Selected=0xAE7BB42F
+    DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=434,971 Selected=0x6C236EB8
 
