--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=385,40
-Size=803,1032
+Pos=339,40
+Size=849,1032
 Collapsed=0
 DockId=0x00000004,0
 
@@ -21,16 +21,16 @@ Collapsed=0
 DockId=0x00000005,1
 
 [Window][Objects]
-Pos=8,40
-Size=516,1032
+Pos=71,40
+Size=266,1032
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Game Viewport]
-Pos=8,40
-Size=1180,1032
+Pos=339,40
+Size=849,1032
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000004,1
 
 [Window][ImNodes Demo]
 Pos=396,40
@@ -45,8 +45,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Properties]
-Pos=8,40
-Size=246,1032
+Pos=71,426
+Size=266,646
 Collapsed=0
 DockId=0x00000007,0
 
@@ -90,6 +90,12 @@ Collapsed=0
 Pos=769,394
 Size=383,230
 Collapsed=0
+
+[Window][Tools]
+Pos=8,40
+Size=61,1032
+Collapsed=0
+DockId=0x00000001,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -196,13 +202,15 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,1032 Split=X Selected=0xAE7BB42F
-  DockNode      ID=0x00000002 Parent=0x6D3A3A6E SizeRef=246,1032 Split=Y Selected=0x7DA7F56F
-    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=370,384 Selected=0x7DA7F56F
-    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=370,646 Split=Y Selected=0xC89E3217
-      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=370,291 Selected=0xC89E3217
-      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=370,353 Selected=0x9A68760C
-  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1656,1032 Split=X Selected=0xAE7BB42F
-    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=932,971 CentralNode=1 Selected=0xAE7BB42F
-    DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=722,971 Selected=0x6C236EB8
+DockSpace         ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,40 Size=1904,1032 Split=X Selected=0xAE7BB42F
+  DockNode        ID=0x00000001 Parent=0x6D3A3A6E SizeRef=61,1032 Selected=0x2B3BF173
+  DockNode        ID=0x0000000A Parent=0x6D3A3A6E SizeRef=1841,1032 Split=X
+    DockNode      ID=0x00000002 Parent=0x0000000A SizeRef=266,1032 Split=Y Selected=0x7DA7F56F
+      DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=370,384 Selected=0x7DA7F56F
+      DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=370,646 Split=Y Selected=0xC89E3217
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=370,291 Selected=0xC89E3217
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=370,353 Selected=0x9A68760C
+    DockNode      ID=0x00000003 Parent=0x0000000A SizeRef=1573,1032 Split=X Selected=0xAE7BB42F
+      DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=932,971 CentralNode=1 Selected=0xAE7BB42F
+      DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=722,971 Selected=0x6C236EB8
 
