--- a/imgui.ini
+++ b/imgui.ini
@@ -9,9 +9,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=552,173
-Size=603,555
+Pos=331,38
+Size=994,1036
 Collapsed=0
+DockId=0x00000004,1
 
 [Window][Level Editor Stuff]
 Pos=8,40
@@ -27,7 +28,7 @@ DockId=0x00000005,0
 
 [Window][Game Viewport]
 Pos=331,38
-Size=733,1036
+Size=994,1036
 Collapsed=0
 DockId=0x00000004,0
 
@@ -44,14 +45,14 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Properties]
-Pos=93,423
-Size=460,656
+Pos=93,425
+Size=236,649
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Sprite Animation Window]
-Pos=1066,38
-Size=846,1036
+Pos=1327,38
+Size=585,1036
 Collapsed=0
 DockId=0x00000009,0
 
@@ -210,6 +211,6 @@ DockSpace         ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,38 Size=1904,1036 Split=
         DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=370,291 Selected=0xC89E3217
         DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=370,353 Selected=0x9A68760C
     DockNode      ID=0x00000003 Parent=0x0000000B SizeRef=1027,1032 Split=X Selected=0xAE7BB42F
-      DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=733,971 CentralNode=1 Selected=0xAE7BB42F
-      DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=846,971 Selected=0x6C236EB8
+      DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=994,971 CentralNode=1 Selected=0xAE7BB42F
+      DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=585,971 Selected=0x6C236EB8
 
